--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ dagger-hilt = "2.57.1"
 hilt-compose = "1.2.0"
 coil = "2.7.0"
 material3Android = "1.3.2"
+navigationCompose = "2.8.3"
+kotlinSerialization = "1.9.0"
 
 
 [libraries]
@@ -33,8 +35,8 @@ dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", vers
 dagger-hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "dagger-hilt" }
 dagger-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-compose" }
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
-material3-android-icons-extended = { group = "androidx.compose.material3", name = "material3-android-icons-extended", version.ref = "material3Android" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose"}
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerialization" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
